--- a/src/app/modules/docente-capacitador/horarios/pages/horarios.component.html
+++ b/src/app/modules/docente-capacitador/horarios/pages/horarios.component.html
@@ -1,46 +1,48 @@
 <div class="container" style="background-color: #ffffff;">
-    <div class="mt-4">
-      <h3 style="text-align: center;">{{ isNew ? 'Nueva Horario' : 'Editar Horario' }}</h3>
-      <form #horarioForm="ngForm" (ngSubmit)="submitForm()">
-        <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <label for="horInicio">Hora Inicio</label>
-                <input type="text" class="form-control" id="horInicio" name="horInicio" [(ngModel)]="horarioSeleccionado.horInicio" required pattern="^(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$">
-                <small class="form-text text-muted">Formato: hh:mm</small>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <label for="horFin">Hora Fin</label>
-                <input type="text" class="form-control" id="horFin" name="horFin" [(ngModel)]="horarioSeleccionado.horFin" required pattern="^(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$">
-                <small class="form-text text-muted">Formato: hh:mm</small>
-              </div>
-            </div>
-          </div>          
-        <button type="submit" class="btn btn-primary">{{ isNew ? 'Crear' : 'Guardar' }}</button>
-      </form>
-    </div>
-    <br>
-    <br>
-    <div class="form-group">
-      <label for="buscar">Buscar:</label>
-      <input type="text" class="form-control" id="buscar" name="buscar" [(ngModel)]="filtro" (keyup)="actualizarFiltro()">
-    </div>
-    <br>
-    <h2>Horarios</h2>
-    <table class="table">
-      <thead>
-        <tr class="bg-primary text-light">
-          <th scope="col">Hora Inicio</th>
-          <th scope="col">Hora Fin</th>
-          <th scope="col">Estado</th>
-          <th scope="col">Acciones</th>
-        </tr>
-      </thead>
-      <tbody>
-        <ng-container *ngFor="let horario of horarios">
-          <tr *ngIf="horario.horInicio.toLowerCase().includes(filtro.toLowerCase()) || 
+  <div class="mt-4">
+    <h3 style="text-align: center;">{{ isNew ? 'Nueva Horario' : 'Editar Horario' }}</h3>
+    <form #horarioForm="ngForm" (ngSubmit)="submitForm()">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <label for="horInicio">Hora Inicio</label>
+            <input type="text" class="form-control" id="horInicio" name="horInicio"
+              [(ngModel)]="horarioSeleccionado.horInicio" required pattern="^(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$">
+            <small class="form-text text-muted">Formato: hh:mm</small>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <label for="horFin">Hora Fin</label>
+            <input type="text" class="form-control" id="horFin" name="horFin" [(ngModel)]="horarioSeleccionado.horFin"
+              required pattern="^(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$">
+            <small class="form-text text-muted">Formato: hh:mm</small>
+          </div>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">{{ isNew ? 'Crear' : 'Guardar' }}</button>
+    </form>
+  </div>
+  <br>
+  <br>
+  <div class="form-group">
+    <label for="buscar">Buscar:</label>
+    <input type="text" class="form-control" id="buscar" name="buscar" [(ngModel)]="filtro" (keyup)="actualizarFiltro()">
+  </div>
+  <br>
+  <h2>Horarios</h2>
+  <table class="table">
+    <thead>
+      <tr class="bg-primary text-light">
+        <th scope="col">Hora Inicio</th>
+        <th scope="col">Hora Fin</th>
+        <th scope="col">Estado</th>
+        <th scope="col">Acciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      <ng-container *ngFor="let horario of horarios">
+        <tr *ngIf="horario.horInicio.toLowerCase().includes(filtro.toLowerCase()) || 
                      horario.horFin.toLowerCase().includes(filtro.toLowerCase())">
           <td>{{ horario.horInicio }}</td>
           <td>{{ horario.horFin }}</td>
@@ -49,11 +51,10 @@
             <button class="btn btn-primary" (click)="editarHorario(horario)">Editar</button>
             <button class="btn btn-danger" (click)="eliminarHorario(horario.horId)">Eliminar</button>
           </td>
-          </tr>
-        </ng-container>
-          </tbody>
-          
-            </table>
-            
-          </div>
-  
+        </tr>
+      </ng-container>
+    </tbody>
+
+  </table>
+
+</div>
